[tool.poetry]
name = "radar-iot"
version = "0.1.0"
description = ""
authors = ["eric li"]
readme = "README.md"
packages = [{include = "radar_iot"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.109.2"}
paho-mqtt = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
